Trimmed town templates to more suitable use of boxes and forms
The basic demo was somewhat bloated. This is a first stage trim down.

--- a/tendenci/themes/HoGS2020/templates/base.html
+++ b/tendenci/themes/HoGS2020/templates/base.html
@@ -83,7 +83,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" type="text/css">
 
     <!-- FAVICON -->
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon.ico' %}">
+    <link rel="icon" type="image/ico" sizes="16x16" href="{% static 'images/favicon.ico' %}">
     
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.css' %}" type="text/css">
