--- a/tendenci/themes/t7-tendenci2020/media/css/base.css
+++ b/tendenci/themes/t7-tendenci2020/media/css/base.css
@@ -323,7 +323,7 @@ section#our-resources {
 
 /* RECENT EVENTS LIST 
 =========== */
-section#recent-events,
+section#upcoming-events,
 section#follow-us,
 footer {
   padding: 40px 0 40px;
