--- a/tendenci/themes/HoGS2020/templates/header.html
+++ b/tendenci/themes/HoGS2020/templates/header.html
@@ -3,34 +3,36 @@
 {% load box_tags %}
 {% load theme_tags %}
 
-<!-- start: navbar outer -->
 <nav class="navbar navbar-default navbar-static-top">
   <div class="container-fluid">
     
     <div class="navbar-header"> 
-<!-- responsive btn --> 
+	  <!-- Toggle button on mobile phones (small screens in which the navbar is collapsed) --> 
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+      	<!-- An icon made of three horizontal bars -->
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span> 
       </button>
-<!-- logo -->      
+      
+	  <!-- logo -->
       <div class="navbar-brand" href="/">
         {% box 1 %}
       </div>
-    </div> <!-- end: navbar-header --> 
-<!-- navigation -->     
+    </div> <!-- end: navbar-header -->
+     
+	<!-- Menu bar -->     
     <div class="container">
       <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav navbar-left">  <!-- main nav -->
+        <ul class="nav navbar-nav navbar-left">  <!-- main menu -->
           {% nav 1 %}
         </ul>
-        <ul class="nav navbar-nav navbar-right"> <!-- right justifed link in separate nav -->      
+        <ul class="nav navbar-nav navbar-right"> <!-- right justifed sub menu for special items -->
           {% nav 2 %}
         </ul>
       </div>
-    </div>
+    </div> <!-- end: container -->
     
   </div> <!-- end: container-fluid --> 
 </nav>
-<!-- end: navbar outer --> 
+ 
