--- a/tendenci/themes/t7-base/templates/news/search.html
+++ b/tendenci/themes/t7-base/templates/news/search.html
@@ -21,7 +21,9 @@
 
 {% block content %}
     <h1>
-        {% firstof trans SITE_GLOBAL_SITEPRIMARYKEYWORDS trans SITE_GLOBAL_SITEDISPLAYNAME %}
+        {% if SITE_GLOBAL_SITEDISPLAYNAME %}
+	        {% trans SITE_GLOBAL_SITEDISPLAYNAME %}
+        {% endif %}
         {% if MODULE_NEWS_LABEL_PLURAL %}
             {% blocktrans with label_plural=MODULE_NEWS_LABEL_PLURAL %}{{ label_plural }}{% endblocktrans %}
         {% else %}
