--- a/tendenci/themes/hogs2020/templates/homepage.html
+++ b/tendenci/themes/hogs2020/templates/homepage.html
@@ -30,12 +30,12 @@
     <div id="page-top-home" role="main">
         <section id="about-us">
             <div class="container">
-                <div class="row col-md vertical-align">
-                    <div class="col-md-5">
+                <div class="row">
+                    <div class="col-md-5 vertical-centre">
                         {% box 3 %}
                     </div>
     
-                    <div class="col-md-7">
+                    <div class="col-md-7 vertical-centre">
                         {% box 4 %}
                     </div>
                 </div>
