Made the Members Quick List much more useful
Added important columns: Member number, Membership Type and Groups. 
Added click-able headers that sort the table

TODO: The group header is not click-able. Against all documentation for some reason I cannot convince this version of Django (and it could be because it's old) to understand "user__group_set" which works a charm ion the template, but annotate and order_by both barf at it complaining that group_set can't be found as a field dumping a list of available fields (from which it is conspicuously missing indeed)

--- a/tendenci/themes/t7-base/templates/reports/membership_quick_list.html
+++ b/tendenci/themes/t7-base/templates/reports/membership_quick_list.html
@@ -1,4 +1,5 @@
 {% extends "reports/base.html" %}
+{% load base_filters %}
 
 {% block content %}
 <div class="page-header">
@@ -8,17 +9,28 @@
 {% if members %}
 <p><a class="btn btn-primary" href="{% url "reports-members-quick-list" %}?output=csv">
     {% trans 'Download CSV File' %}</a></p>
+    <p>{{ members | length }} active members</p>
     <table class="table table-tendenci-reports">
         <tr>
-            <th>{% trans "Last Name" %}</th>
-            <th>{% trans "First Name" %}</th>
-            <th>{% trans "Company" %}</th>
+            <th><a href="{{ request | with_parameters:'order_by=member_number_int' }}">{% trans "Member Number" %}</a></th>
+            <th><a href="{{ request | with_parameters:'order_by=membership_type' }}">{% trans "Membership Type" %}</a></th>
+            <th><a href="{{ request | with_parameters:'order_by=user__last_name' }}">{% trans "Last Name" %}</a></th>
+            <th><a href="{{ request | with_parameters:'order_by=user__first_name' }}">{% trans "First Name" %}</a></th>
+            <th><a href="{{ request | with_parameters:'order_by=user__profile__company' }}">{% trans "Company" %}</a></th>
+            <th>{% trans "Groups" %}</th>
         </tr>
         {% for member in members %}
         <tr>
+            <td>{{ member.member_number }}</td>
+            <td>{{ member.membership_type }}</td>
             <td>{{ member.user.last_name }}</td>
             <td>{{ member.user.first_name }}</td>
             <td>{{ member.user.profile.company }}</td>
+            <td>
+				{% for group in member.user.group_set.all %}
+				    {{ group.name }} {% if not forloop.last %}, {% endif %} 
+				{% endfor %}
+			</td>
         </tr>
         {% endfor %}
     </table>
