Size  member add select boxes more reasonably
Alas these are left to the default select sizing and in CSS what we see happening is Django applying a height (which seems a reasonable height) and then bootstrap overriding that to auto and the size is browser default. 

There is possibly a "right" way to do this with CSS and Bootstrap, but I haven't got all day to research it. This is by any measure a LOT better than the default sizing I'm seeing.

--- a/tendenci/themes/t7-base/templates/user_groups/member_add.html
+++ b/tendenci/themes/t7-base/templates/user_groups/member_add.html
@@ -88,5 +88,9 @@
             $("#id_members_input2").val('');
         });
     });
+	$(function () {
+	   $("#id_members_from").attr("size", Math.max(10, Math.min(20, $("#id_members_from option").length)));
+	   $("#id_members_to").attr("size",Math.max(10, Math.min(20, $("#id_members_to option").length)));
+	});    
 </script>
 {% endblock %}
