--- a/tendenci/themes/t7-base/templates/user_groups/meta.html
+++ b/tendenci/themes/t7-base/templates/user_groups/meta.html
@@ -50,7 +50,7 @@
                             {% endif %}
                             <li><a href="{% url "group.edit_perms" group.id %}" class="option-link permissions" title="Edit Permissions">{% trans "Permissions" %}</a></li>
                             {% if can_add_member %}
-                                <li><a href="{% url "group.adduser" group.slug %}" class="option-link addmember" title="Add new member">{% trans "Add Member" %}</a></li>
+                                <li><a href="{% url "group.adduser" group.slug %}" class="option-link addmember" title="Add new members">{% trans "Add Members" %}</a></li>
                             {% endif %}
                             {% if user|in_group:group.id %}
                                 {% if group.allow_self_remove and user.is_authenticated or can_add_member %}
