Fixed header on group detail page
It read "Group members in sets of 100" which neither told us how large the group was nor made sense if it held under 100 members. This fixes that.

--- a/tendenci/themes/t7-base/templates/user_groups/detail.html
+++ b/tendenci/themes/t7-base/templates/user_groups/detail.html
@@ -80,7 +80,11 @@
     {% autopaginate groupmemberships 100 %}
     {% paginate %}
     <div class="group-member-list">
-      <p>Group members in sets of 100</p>
+      <p>{{ count_members }} group members 
+	    {% if count_members > 100 %}
+    	in sets of 100
+	    {% endif %}
+      </p>
       {% for gm in groupmemberships %}
       <div class="group-member {% cycle 'gray' '' %}">
         
