Added back link to Add/Remove members from the Group Details page
This closes the workflow of adding, saving, reviewing, going back to make changes. Was sorely missing.

--- a/tendenci/themes/t7-base/templates/user_groups/detail.html
+++ b/tendenci/themes/t7-base/templates/user_groups/detail.html
@@ -39,6 +39,9 @@
         <li><a href="{% url "group.message" group.slug %}">{% blocktrans %}Email all {{ count_members }} member{% endblocktrans %}{{ count_members|pluralize }}</a></li>
         {% endif %}
         
+        <li><a href="{% url "group.adduser" group.slug %}">
+          {% trans "Add/Remove Group Members" %}</a></li>
+
         <li><a href="{% url "group.edit_perms" group.pk %}">
           {% trans "Change Group Member Permissions" %}</a></li>
         
