Fixed a bug in the header link test
And ordered group list by id

--- a/tendenci/themes/t7-base/templates/reports/membership_quick_list.html
+++ b/tendenci/themes/t7-base/templates/reports/membership_quick_list.html
@@ -17,7 +17,7 @@
             <th><a href="{% order_by request order_by 'user__last_name' %}">{% trans "Last Name" %}</a></th>
             <th><a href="{% order_by request order_by 'user__first_name' %}">{% trans "First Name" %}</a></th>
             <th><a href="{% order_by request order_by 'user__profile__company' %}">{% trans "Company" %}</a></th>
-            <th>{% if member.user_group_list %}
+            <th>{% if members.first.user_group_list %}
             		<a href="{% order_by request order_by 'user_group_list' %}">
 	            {% endif %}
 	            {% trans "Groups" %}
