Fixed a bug for users with userid 0
Was not being listed.

--- a/tendenci/themes/t7-base/templates/profiles/search-result.html
+++ b/tendenci/themes/t7-base/templates/profiles/search-result.html
@@ -4,7 +4,7 @@
 {% load profile_tags %}
 
 
-{% if profile.user_id %}
+{% if profile.user %}
     <div class="wrap-search-item">
         {% with profile.membership as membership %}
             <div class="" style="padding:10px;">
