Make the officers table headings bold by default
Seems odd that they were not.

--- a/tendenci/themes/t7-base/templates/committees/media/css/committees.css
+++ b/tendenci/themes/t7-base/templates/committees/media/css/committees.css
@@ -253,7 +253,7 @@ table#officer-table tbody tr:nth-child(2n) {
 }
 
 table#officer-table th {
-    font-weight: normal;
+    font-weight: bold;
     padding: 10px;
 }
 
