Label Membership Status accurately

--- a/tendenci/themes/t7-base/templates/profiles/search-result.html
+++ b/tendenci/themes/t7-base/templates/profiles/search-result.html
@@ -66,7 +66,7 @@
                         {% endif %}
 
                         {% if membership.status_detail %}
-                            <b>{% trans "Application Status:" %}</b> {{ membership.status_detail }}<br />
+                            <b>{% trans "Membership Status:" %}</b> {{ membership.status_detail }}<br />
                         {% endif %}
                     </div>
 
