--- a/tendenci/themes/t7-base/templates/profiles/search-result.html
+++ b/tendenci/themes/t7-base/templates/profiles/search-result.html
@@ -5,6 +5,8 @@
 
 
 {% if profile.user %}
+	{% has_perm user profiles.change_profile profile as can_edit_profile %}
+	
     <div class="wrap-search-item">
         {% with profile.membership as membership %}
             <div class="" style="padding:10px;">
@@ -55,7 +57,7 @@
                             {% endif %}
                         {% endif %}
 
-                        {% if request.user.profile.is_superuser or request.user == profile.user %}
+                        {% if request.user.profile.is_superuser or request.user == profile.user or can_edit_profile %}
                             {% if profile.member_number %}
                                 <b>{% trans "Member Number:" %}</b> {{ profile.member_number }}<br />
                             {% endif %}
@@ -83,7 +85,7 @@
                             {% endif %}
                         {% endif %}
 
-                        {% if request.user.profile.is_superuser or request.user == profile.user %}
+                        {% if request.user.profile.is_superuser or request.user == profile.user  or can_edit_profile %}
                             {% if membership.create_dt %}
                                 <b>{% trans "Create Date:" %}</b> {{ membership.create_dt | date }}<br />
                             {% endif %}
