--- a/tendenci/themes/t7-base/templates/reports/membership_quick_list.html
+++ b/tendenci/themes/t7-base/templates/reports/membership_quick_list.html
@@ -12,10 +12,11 @@
     <p>{{ members | length }} active members</p>
     <table class="table table-tendenci-reports">
         <tr>
-            <th><a href="{% order_by request order_by 'member_number_int' %}">{% trans "Member Number" %}</a></th>
-            <th><a href="{% order_by request order_by 'membership_type' %}">{% trans "Membership Type" %}</a></th>
             <th><a href="{% order_by request order_by 'user__last_name' %}">{% trans "Last Name" %}</a></th>
             <th><a href="{% order_by request order_by 'user__first_name' %}">{% trans "First Name" %}</a></th>
+            <th><a href="{% order_by request order_by 'member_number_int' %}">{% trans "Member Number" %}</a></th>
+            <th><a href="{% order_by request order_by 'membership_type' %}">{% trans "Membership Type" %}</a></th>
+            <th><a href="{% order_by request order_by 'expire_dt' %}">{% trans "Expiry Date" %}</a></th>
             <th><a href="{% order_by request order_by 'user__profile__company' %}">{% trans "Company" %}</a></th>
             <th>{% if members.first.user_group_list %}
             		<a href="{% order_by request order_by 'user_group_list' %}">
@@ -28,10 +29,11 @@
         </tr>
         {% for member in members %}
         <tr>
-            <td>{{ member.member_number }}</td>
-            <td>{{ member.membership_type }}</td>
             <td>{{ member.user.last_name }}</td>
             <td>{{ member.user.first_name }}</td>
+            <td>{{ member.member_number }}</td>
+            <td nowrap>{{ member.membership_type }}</td>
+            <td nowrap>{{ member.expire_dt }}</td>
             <td>{{ member.user.profile.company }}</td>
             <td>{% if member.user_group_list %}
 	            	{{ member.user_group_list }}
